{
  "version": 4,
  "terraform_version": "1.15.7",
  "serial": 14,
  "lineage": "0e85622a-094f-89fe-07cb-2a6c7c0e798d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "k3s",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c384e1d8f109fce9",
            "arn": "arn:aws:ec2:us-east-1:862457280450:elastic-ip/eipalloc-0c384e1d8f109fce9",
            "association_id": "eipassoc-0f7bf656e92224a41",
            "domain": "vpc",
            "id": "eipalloc-0c384e1d8f109fce9",
            "instance": "i-098825e5e430e89d5",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0531bf0acf387a979",
            "private_dns": "ip-10-0-1-33.ec2.internal",
            "private_ip": "10.0.1.33",
            "public_dns": "ec2-100-29-207-220.compute-1.amazonaws.com",
            "public_ip": "100.29.207.220",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "predictive-sre-free-eip"
            },
            "tags_all": {
              "Name": "predictive-sre-free-eip"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_instance.k3s",
            "aws_internet_gateway.main",
            "aws_key_pair.deployer",
            "aws_security_group.k3s",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_ami.amazon_linux",
            "data.aws_availability_zones.available",
            "tls_private_key.deployer"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "k3s",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c77d5489ecd327ba",
            "arn": "arn:aws:ec2:us-east-1:862457280450:instance/i-098825e5e430e89d5",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-098825e5e430e89d5",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "predictive-sre-free-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0531bf0acf387a979",
            "private_dns": "ip-10-0-1-33.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.33",
            "public_dns": "ec2-34-203-194-133.compute-1.amazonaws.com",
            "public_ip": "34.203.194.133",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0155820e2440375ed",
                "volume_size": 30,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05172b4a8eb866aea",
            "tags": {
              "Name": "predictive-sre-free-k3s-node"
            },
            "tags_all": {
              "Name": "predictive-sre-free-k3s-node"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0989668b7656257d5"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_key_pair.deployer",
            "aws_security_group.k3s",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_ami.amazon_linux",
            "data.aws_availability_zones.available",
            "tls_private_key.deployer"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:862457280450:internet-gateway/igw-0406314f08ced7948",
            "id": "igw-0406314f08ced7948",
            "owner_id": "862457280450",
            "tags": {
              "Name": "predictive-sre-free-igw"
            },
            "tags_all": {
              "Name": "predictive-sre-free-igw"
            },
            "vpc_id": "vpc-04428744308835c85"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:862457280450:route-table/rtb-0529daa053f2ff7b4",
            "id": "rtb-0529daa053f2ff7b4",
            "owner_id": "862457280450",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0406314f08ced7948",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "predictive-sre-free-public-rt"
            },
            "tags_all": {
              "Name": "predictive-sre-free-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-04428744308835c85"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d28ea499ad0df659",
            "route_table_id": "rtb-0529daa053f2ff7b4",
            "subnet_id": "subnet-05172b4a8eb866aea"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "k3s",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:862457280450:security-group/sg-0989668b7656257d5",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0989668b7656257d5",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 6443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 6443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "predictive-sre-free-sg20260707051230803700000001",
            "name_prefix": "predictive-sre-free-sg",
            "owner_id": "862457280450",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "predictive-sre-free-sg"
            },
            "tags_all": {
              "Name": "predictive-sre-free-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-04428744308835c85"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:862457280450:subnet/subnet-05172b4a8eb866aea",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05172b4a8eb866aea",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "862457280450",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "predictive-sre-free-public"
            },
            "tags_all": {
              "Name": "predictive-sre-free-public"
            },
            "vpc_id": "vpc-04428744308835c85"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:862457280450:vpc/vpc-04428744308835c85",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-03ec309e57cea622b",
            "default_route_table_id": "rtb-0bb4089dbe513fae0",
            "default_security_group_id": "sg-0286ff56ad689d216",
            "dhcp_options_id": "dopt-082720d41bda22287",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-04428744308835c85",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0bb4089dbe513fae0",
            "owner_id": "862457280450",
            "tags": {
              "Name": "predictive-sre-free-vpc"
            },
            "tags_all": {
              "Name": "predictive-sre-free-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}